--- a/views/login.html
+++ b/views/login.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-          <label for="credentialsPassword">密码</label>
+          <label for="credentialsPassword">密码 <span><a href="/pasword-reset">忘记密码?</a></span></label>
           <input class="form-control" id="credentialsPassword" type="password" name="credentials[password]" required> 
 
           {% if errors.emptyPassword %}
@@ -33,6 +33,7 @@
         </div>
         <button class="btn btn-block btn-primary" type="submit">Login</button>
       </form>
+      <p>还没有FT中文网账号?<a href="/signup?source=login">创建</a></p>
       {% endif %}
     </div>
   </div>
