--- a/views/settings/profile.html
+++ b/views/settings/profile.html
@@ -3,7 +3,8 @@
 {% block main %}
 
 <div class="row">
-  <div class="col-12">
+  {% include "settings/nav.html" %}
+  <div class="col-9">
     <form method="post">
 
       <div class="form-row">
