--- a/views/signup.html
+++ b/views/signup.html
@@ -10,11 +10,13 @@
         <div class="form-group">
           <label for="userEmail">邮箱</label>
           <input class="form-control" id="userEmail" type="text" name="user[email]" value="{{user.email}}" required>
+          <small class="form-text text-muted">用此邮箱登录FT中文网</small>
         </div>
 
         <div class="form-group">
           <label for="userPassword">密码</label>
-          <input class="form-control" id="userPassword" type="password" name="user[password]" required> 
+          <input class="form-control" id="userPassword" type="password" name="user[password]" required>
+          <small class="form-text text-muted">8-20个字符，不能使用空格、表情符号</small>
         </div>
 
         
