--- a/views/settings/nav.html
+++ b/views/settings/nav.html
@@ -1,5 +1,5 @@
 <div class="col-3">
-  <ul class="nav">
+  <ul class="nav flex-column">
     <li class="nav-item">
       <a class="nav-link" href="/settings/profile">我的资料</a>
     </li>
