--- a/views/signup.html
+++ b/views/signup.html
@@ -17,6 +17,7 @@
           type="text"
           name="user[email]"
           value="{{user.email}}"
+          placeholder="电子邮箱"
           required>
           <small class="form-text text-muted">用于登录FT中文网</small>
 
@@ -31,6 +32,7 @@
           id="userPassword"
           type="password"
           name="user[password]"
+          placeholder="密码"
           required>
           <small class="form-text text-muted">8-20个字符，不能使用空格、表情符号</small>
 
