--- a/views/login.html
+++ b/views/login.html
@@ -29,9 +29,7 @@
         </div>
 
         <div class="form-group">
-          <label class="clearfix d-block" for="credentialsPassword">密码
-            <a class="float-right" href="/password-reset">忘记密码?</a>
-          </label>
+          <label for="credentialsPassword">密码</label>
           <input class="form-control"
           id="credentialsPassword"
           type="password"
@@ -39,9 +37,16 @@
           placeholder="密码"
           required>
         </div>
-        <div class="form-check">
-            <input class="form-check-input" id="rememberMe" type="checkbox" name="rememberMe" value="true" checked>
+        <div class="form-check clearfix">
+            <input class="form-check-input"
+            id="rememberMe"
+            type="checkbox"
+            name="rememberMe"
+            value="true"
+            checked>
             <label for="rememberMe">记住我</label>
+
+            <a class="float-right" href="/password-reset">忘记密码?</a>
         </div>
 
         <button class="btn btn-block btn-primary" type="submit">登录</button>
