--- a/views/profile/notification.html
+++ b/views/profile/notification.html
@@ -6,18 +6,30 @@
   <div class="col-9">
     <section>
       <h5>邮件设置</h5>
-      <form action="/users/{{id}}/newsletter" method="post">
+      <form method="post">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="newsletter[todayFocus]" id="newsletterTodayFocus">
+          <input class="form-check-input"
+          id="newsletterTodayFocus"
+          type="checkbox"
+          name="newsletter[todayFocus]"
+          {% if newsletter.todayFocus %} checked{% endif %}>
           <label class="form-check-label" for="newsletterTodayFocus">接收“今日焦点”邮件</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="newsletter[weeklyChoice]" id="newsletterWeeklyChoice">
+          <input class="form-check-input"
+          id="newsletterWeeklyChoice"
+          type="checkbox"
+          name="newsletter[weeklyChoice]"
+          {% if newsletter.weeklyChoice %} checked{% endif %}>
           <label class="form-check-label" for="newsletterWeeklyChoice">接收“一周精选”邮件</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="newsletter[noonExpress]" id="newsletterNoonExpress">
-          <label class="form-check-label" for="newsletterNoonExpress">接收“午后速递”邮件</label>
+          <input class="form-check-input"
+          id="newsletterAfternoonExpress"
+          type="checkbox"
+          name="newsletter[afternoonExpress]"
+          {% if newsletter.afternoonExpress %} checked{% endif %}>
+          <label class="form-check-label" for="newsletterAfternoonExpress">接收“午后速递”邮件</label>
         </div>
         <button type="submit" class="btn btn-primary">保存</button>
       </form>
