middleware to check acess token

--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="{{iconUrl}}/apple-touch-icon-76x76.png">
   <link href="{{iconUrl}}/favicon.ico" type="image/x-icon" rel="shortcut icon"/>
 
-  <title>{% block title %}{% endblock %} - FT中文网</title>
+  <title>{% block title %}用户中心{% endblock %} - FT中文网</title>
   {% if env.isProduction %}
   <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   {% else %}
