--- a/views/login.html
+++ b/views/login.html
@@ -62,7 +62,7 @@
     <div class="mt-4">
       <h5>其他登录方式</h5>
       <ul>
-        <li><a href="">微信</a></li>
+        <li><a href="/login/weixin">微信</a></li>
         <li><a href="">微博</a></li>
       </ul>
     </div>
