--- a/views/password/new-password.html
+++ b/views/password/new-password.html
@@ -1,6 +1,6 @@
-{% extends "password/base.html" %}
+{% extends "layouts/center.html" %}
 
-{% block action %}
+{% block content %}
   <h4 class="text-center">更改 {{email}} 的密码</h4>
 
   {% if errors.pwMismatch %}
