--- a/views/layouts/center.html
+++ b/views/layouts/center.html
@@ -5,7 +5,7 @@
   <div class="col-md-7 col-lg-5 col-xl-4">
     <div class="mt-4">
 
-      {% block action %}{% endblock %}
+      {% block content %}{% endblock %}
       
     </div>
   </div>
