--- a/views/new-user/signup.html
+++ b/views/new-user/signup.html
@@ -1,55 +1,49 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/center.html" %}
 
-{% block main %}
-<div class="row justify-content-center">
-  <div class="col-md-7 col-lg-5 col-xl-4">
-    <div class="mt-4">
-      <div class="text-center">创建FT中文网账号</div>
-      <form method="post">
-        <div>
-          <input type="hidden" name="_csrf" value="{{csrf}}">
-        </div>
-        <div class="form-group">
-          <label for="userEmail">邮箱</label>
-
-          <input class="form-control"
-          id="userEmail"
-          type="text"
-          name="user[email]"
-          value="{{user.email}}"
-          placeholder="电子邮箱"
-          required>
-          <small class="form-text text-muted">用于登录FT中文网</small>
-
-          {% if errors.email %}
-          <div class="form-errortext">{{errors.email}}</div>
-          {% endif %}
-        </div>
-
-        <div class="form-group">
-          <label for="userPassword">密码</label>
-          <input class="form-control"
-          id="userPassword"
-          type="password"
-          name="user[password]"
-          placeholder="密码"
-          required>
-          <small class="form-text text-muted">8-20个字符，不能使用空格、表情符号</small>
-
-          {% if errors.password %}
-          <div class="form-errortext">{{errors.password}}</div>
-          {% endif %}
-        </div>
-
-
-        <button class="btn btn-block btn-primary" type="submit">注册</button>
-      </form>
-      <small class="">注册即代表您同意FT中文网<a href="http://www.ftchinese.com/m/corp/service.html" target="_blank">《用户注册协议》</a></small>
-
-      <p class="text-center">已有账号？<a href="/login?source=signup">登录</a></p>
-    </div>
-
-    <button type="button" class="btn btn-secondary btn-block">下载FT中文网APP</button>
+{% block content %}
+<div class="text-center">创建FT中文网账号</div>
+<form method="post">
+  <div>
+    <input type="hidden" name="_csrf" value="{{csrf}}">
   </div>
-</div>
+  <div class="form-group">
+    <label for="userEmail">邮箱</label>
+
+    <input class="form-control"
+    id="userEmail"
+    type="text"
+    name="user[email]"
+    value="{{user.email}}"
+    placeholder="电子邮箱"
+    required>
+    <small class="form-text text-muted">用于登录FT中文网</small>
+
+    {% if errors.email %}
+    <div class="form-errortext">{{errors.email}}</div>
+    {% endif %}
+  </div>
+
+  <div class="form-group">
+    <label for="userPassword">密码</label>
+    <input class="form-control"
+    id="userPassword"
+    type="password"
+    name="user[password]"
+    placeholder="密码"
+    required>
+    <small class="form-text text-muted">8-20个字符，不能使用空格、表情符号</small>
+
+    {% if errors.password %}
+    <div class="form-errortext">{{errors.password}}</div>
+    {% endif %}
+  </div>
+
+
+  <button class="btn btn-block btn-primary" type="submit">注册</button>
+</form>
+<small class="">注册即代表您同意FT中文网<a href="http://www.ftchinese.com/m/corp/service.html" target="_blank">《用户注册协议》</a></small>
+
+<p class="text-center">已有账号？<a href="/login?source=signup">登录</a></p>
+
+<button type="button" class="btn btn-secondary btn-block">下载FT中文网APP</button>
 {% endblock %}
