--- a/views/profile/nav.html
+++ b/views/profile/nav.html
@@ -1,4 +1,4 @@
-<div class="col-3">
+<div class="col-sm-3">
     <ul class="nav flex-column">
       <li class="nav-item">
         <a class="nav-link" href="/profile">我的资料</a>
