--- a/views/new-user/signup.html
+++ b/views/new-user/signup.html
@@ -19,7 +19,7 @@
     <small class="form-text text-muted">用于登录FT中文网</small>
 
     {% if errors.email %}
-    <div class="form-errortext">{{errors.email}}</div>
+    <div class="form-errortext">{{errors.email.message}}</div>
     {% endif %}
   </div>
 
@@ -34,7 +34,7 @@
     <small class="form-text text-muted">8-20个字符，不能使用空格、表情符号</small>
 
     {% if errors.password %}
-    <div class="form-errortext">{{errors.password}}</div>
+    <div class="form-errortext">{{errors.password.message}}</div>
     {% endif %}
   </div>
 
