--- a/views/password/new-password.html
+++ b/views/password/new-password.html
@@ -3,12 +3,17 @@
 {% block content %}
   <h4 class="text-center">更改 {{email}} 的密码</h4>
 
-  {% if errors.pwMismatch %}
-  <div class="form-errortext">两次输入的密码不符，请重新输入</div>
+  {% if errors.mismatch %}
+    <div class="form-errortext">{{errors.mismatch.message}}</div>
   {% endif %}
 
-  {% if errors.pwInvalid%}
-  <div class="form-errortext">密码非法</div>
+  {# TODO: should we handle invalid confirmPassword? #}
+  {% if errors.password %}
+    <div class="form-errortext">{{errors.password.message}}</div>
+  {% endif %}
+
+  {% if errors.confirmPassword %}
+    <div class="form-errortext">{{errors.confirmPassword.message}}</div>
   {% endif %}
 
   <form method="post">
@@ -21,13 +26,13 @@
       required>
     </div>
     <div class="form-group">
-      <label for="passwordConfirmation">再次输入确认</label>
+      <label for="confirmPassword">再次输入确认</label>
       <input class="form-control"
-      id="passwordConfirmation"
+      id="confirmPassword"
       type="password"
-      name="passwordConfirmation"
+      name="confirmPassword"
       required>
     </div>
-    <button class="btn btn-primary btn-block" type="submit">更改密码</button>
+    <button class="btn btn-primary btn-block" type="submit">重置密码</button>
   </form>
 {% endblock %}
