--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -22,22 +22,27 @@
 <body>
   <header class="navbar navbar-expand-lg o-header">
     <div class="container">
+
       <a class="navbar-brand" href="/">FT中文网</a>
 
-      {% if user %}
       <ul class="navbar-nav">
+        {% if user %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">myFT</a>
 
-          <div class="dropdown-menu">
+          <div class="dropdown-menu dropdown-menu-right">
             
             <a class="dropdown-item" href="/settings/profile">设置</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/logout">退出</a>
           </div>
         </li>
+        {% else %}
+        <li class="nav-item">
+          <a href="/login">登录</a> <a href="/signup">注册</a>
+        </li>
+        {% endif %}
       </ul>
-      {% endif %}
     </div>
   </header>
 
