--- a/views/error.html
+++ b/views/error.html
@@ -2,8 +2,10 @@
 {% block main %}
 <div class="container">
   <div class="jumbotron">
-      <h1>{{status}} {{message}}</h1>
-      <pre>{{stack}}</pre>
+      <h1>{{error.status}} {{error.message}}</h1>
+      {% if not env.isProduction %}
+      <pre>{{error.stack}}</pre>
+      {% endif %}
   </div>
 </div>
 
