--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -31,7 +31,8 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">myFT</a>
 
           <div class="dropdown-menu dropdown-menu-right">
-            
+            <h6 class="dropdown-header">{{user.name}}</h6>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/settings/profile">设置</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/logout">退出</a>
