--- a/views/profile/address.html
+++ b/views/profile/address.html
@@ -1,75 +1,83 @@
-{% extends "layouts/base.html" %} 
+{% extends "layouts/profile.html" %} 
 
-{% block main %}
+{% block content %}
 
-<div class="row">
-  {% include "profile/nav.html" %}
-  <div class="col-9">
-    {% if flash.addressSaved %}
-    <p>地址已保存</p>
-    {% endif %}
-    <form method="post">
+{% if alert.saved %}
+  <div class="alert alert-success" role="alert">地址已保存</div>
+{% endif %}
 
-      <div class="form-group">
-        <label for="province">地址</label>
-        <input type="text"
-        id="profileAddress"
-        class="form-control"
-        name="profile[address]"
-        value="{{profile.address}}">
-      </div>
+<form method="post">
 
-      <div class="form-row">
-        <div class="form-group col-md-4">
-          <label for="province">省/直辖市</label>
-          <input type="text"
-          id="addressProvince"
-          class="form-control"
-          name="address[province]"
-          value="{{address.province}}">
-        </div>
-        
-        <div class="form-group col-md-4">
-          <label for="city">市</label>
-          <input type="text"
-          id="addressCity"
-          class="form-control"
-          name="address[city]"
-          value="{{address.city}}">
-        </div>
+  <div class="form-row">
+    <div class="form-group col-md-4">
+      <label for="province">省/直辖市</label>
+      <input type="text"
+      id="province"
+      class="form-control"
+      name="address[province]"
+      value="{{address.province}}">
 
-        <div class="form-group col-md-4">
-          <label for="district">区/县</label>
-          <input type="text"
-          id="districtDistrict"
-          class="form-control"
-          name="address[district]"
-          value="{{address.district}}">
-        </div>
-      </div>
+      {% if errors.province %}
+        <div class="form-errtext">{{errors.province.message}}</div>
+      {% endif %}
+    </div>
+    
+    <div class="form-group col-md-4">
+      <label for="city">市/县</label>
+      <input type="text"
+      id="city"
+      class="form-control"
+      name="address[city]"
+      value="{{address.city}}">
 
-      <div class="form-row">
-        <div class="form-group col-md-10">
-          <label for="street">街道</label>
-          <input type="text"
-          id="addressStreet"
-          class="form-control"
-          name="address[street]"
-          value="{{address.street}}">
-        </div>
-        <div class="form-group col-md-2">
-          <label for="zipCode">邮编</label>
-          <input type="text"
-          id="profileZipCode"
-          class="form-control"
-          name="profile[zipCode]"
-          value="{{profile.zipCode}}">
-        </div>
-      </div>
-      
-      <button type="submit" class="btn btn-primary">保存</button>
-    </form>
+      {% if errors.city %}
+        <div class="form-errtext">{{errors.city.message}}</div>
+      {% endif %}
+    </div>
+
+    <div class="form-group col-md-4">
+      <label for="district">区</label>
+      <input type="text"
+      id="district"
+      class="form-control"
+      name="address[district]"
+      value="{{address.district}}">
+
+      {% if errors.district %}
+        <div class="form-errtext">{{errors.district.message}}</div>
+      {% endif %}
+    </div>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group col-md-10">
+      <label for="street">街道</label>
+      <input type="text"
+      id="street"
+      class="form-control"
+      name="address[street]"
+      value="{{address.street}}">
+
+      {% if errors.street %}
+        <div class="form-errtext">{{errors.street.message}}</div>
+      {% endif %}
+    </div>
+
+    <div class="form-group col-md-2">
+      <label for="zipCode">邮编</label>
+      <input type="text"
+      id="zipCode"
+      class="form-control"
+      name="address[zipCode]"
+      value="{{address.zipCode}}">
+
+      {% if errors.zipCode %}
+        <div class="form-errtext">{{errors.zipCode.message}}</div>
+      {% endif %}
+    </div>
   </div>
   
-</div>
+  <button type="submit" class="btn btn-primary">保存</button>
+</form>
+
 {% endblock %}
