--- a/views/profile/password.html
+++ b/views/profile/password.html
@@ -1,53 +1,55 @@
-{% extends "layouts/base.html" %} 
+{% extends "layouts/profile.html" %} 
 
-{% block main %}
+{% block content %}
+{% if alert.saved %}
+  <div class="alert alert-success" role="alert">密码修改成功</div>
+{% endif %}
 
-<div class="row">
-  {% include "profile/nav.html" %}
-  <div class="col-9">
-    <section class="pt-2 mb-3">
-      <h5>更改密码</h5>
-      {% if errors.notChanged %}
-      <div class="form-errortext">{{errors.notChanged}}</div>
-      {% endif %}
+<h5>更改密码</h5>
 
-      {% if errors.confirmMismatch %}
-      <div class="form-errortext">{{errors.confirmMismatch}}</div>
-      {% endif %}
+<form method="post" action="/profile/password">
+  <div class="form-group">
+    <label for="oldPassword">当前密码</label>
+    <input type="password"
+    class="form-control"
+    id="oldPassword"
+    name="oldPassword"
+    required>
 
-      <form action="/users/{{account.id}}/password">
-        <div class="form-group">
-          <label for="userCurrentPassword">当前密码</label>
-          <input type="password"
-          class="form-control"
-          id="userCurrentPassword"
-          name="user[currentPassword]">
-
-          {% if errors.notAuthenticated %}
-          <div class="form-errortext">{{errors.notAuthenticated}}</div>
-          {% endif %}
-        </div>
-        <div class="form-group">
-          <label for="userPassword">新密码</label>
-          <input type="password"
-          class="form-control"
-          id="userPassword"
-          name="user[password]">
-          <small class="form-text text-muted">8-20个字符，不能使用空格、表情符号</small>
-        </div>
-        <div class="form-group">
-          <label for="userPasswordConfirmation">再次输入新密码</label>
-          <input type="password"
-          class="form-control"
-          id="userPasswordConfirmation"
-          name="user[passwordConfirmation]">
-        </div>
-        
-        <button type="submit" class="btn btn-primary">保存密码</button>
-        <a href="/password-reset">忘记密码？</a>
-      </form>
-    </section>
+    {% if errors.oldPassword %}
+      <div class="form-errortext">{{errors.oldPassword.message}}</div>
+    {% endif %}
   </div>
 
-</div>
+  <div class="form-group">
+    <label for="newPassword">新密码</label>
+    <input type="password"
+    class="form-control"
+    id="newPassword"
+    name="newPassword"
+    required>
+    <small class="form-text text-muted">8-20个字符，不能使用空格、表情符号</small>
+
+    {% if errors.newPassword %}
+      <div class="form-errortext">{{errors.newPassword.message}}</div>
+    {% endif %}
+  </div>
+
+  <div class="form-group">
+    <label for="confirmPassword">再次输入新密码</label>
+    <input type="password"
+    class="form-control"
+    id="confirmPassword"
+    name="confirmPassword"
+    required>
+
+    {% if errors.confirmPassword %}
+      <div class="form-errortext">{{errors.confirmPassword.message}}</div>
+    {% endif %}
+  </div>
+  
+  <button type="submit" class="btn btn-primary">保存密码</button>
+  <a href="/password-reset" target="_blank">忘记密码？</a>
+</form>
+
 {% endblock %}
