redesign password reset process

--- a/views/password/enter-email.html
+++ b/views/password/enter-email.html
@@ -13,7 +13,7 @@
     <div class="form-group">
       <label for="email">请输入您的电子邮箱，我们会向该邮箱发送邮件，帮您重置密码</label>
       <input class="form-control"
-      id="credentialsEmail"
+      id="email"
       type="email"
       name="email"
       value="{{email}}"
