--- a/views/password/success.html
+++ b/views/password/success.html
@@ -5,12 +5,12 @@
     1. Tell user password reset email is sent;
     2. Tell user password is reset.
   #}
-  {% if success.email %}
-  <p>检查您的邮件，点击邮件中的“重置密码”按钮修改您的密码。如果几分钟内没有看到邮件，请检查是否被放进了垃圾邮件列表。</p>
+  {% if alert.emailSent %}
+  <div>检查您的邮件，点击邮件中的“重置密码”按钮修改您的密码。如果几分钟内没有看到邮件，请检查是否被放进了垃圾邮件列表。</div>
   {% endif %}
 
-  {% if success.reset %}
-  <p class="text-center">密码已更新，请登录</p>
+  {% if alert.reset %}
+  <div class="text-center">密码已更新，请登录</div>
   {% endif %}
 
   <a class="btn btn-primary btn-block" href="/login">返回登录页</a>
