revamp folder, redesign url

--- a/views/layouts/profile.html
+++ b/views/layouts/profile.html
@@ -8,20 +8,23 @@
         <a class="nav-link" href="/profile">我的资料</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/profile/account">账号</a>
+        <a class="nav-link" href="/email">邮箱</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/account">账号安全</a>
       </li>
       <li></li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="/profile/password">密码</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/profile/notification">消息和邮件</a>
+      </li> -->
+      <li class="nav-item">
+        <a class="nav-link" href="/membership">会员</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/profile/membership">会员</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/profile/address">地址</a>
+        <a class="nav-link" href="/address">地址</a>
       </li>
     </ul>
   </div>
