--- a/views/password/enter-email.html
+++ b/views/password/enter-email.html
@@ -2,30 +2,34 @@
 
 {% block content %}
   <h4 class="text-center">找回密码</h4>
-  
-  {# If the token in the link user clickd does not exist, is already used, or is expired, the link is invalid. #}
 
-  {% if errors.invalidLink %}
-  <div class="form-errortext">您似乎点击了无效的重置密码链接，请重试</div>
+  {% if errors.token %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <span>{{errors.token.message}}</span>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
   {% endif %}
 
   <form method="post">
     <div class="form-group">
       <label for="email">请输入您的电子邮箱，我们会向该邮箱发送邮件，帮您重置密码</label>
       <input class="form-control"
-      id="email"
-      type="email"
-      name="email"
-      value="{{email}}"
-      placeholder="登录FT中文网所用的邮箱"
-      required>
+        id="email"
+        type="email"
+        name="email"
+        value="{{email}}"
+        placeholder="登录FT中文网所用的邮箱"
+        required>
 
       {% if errors.email %}
-      <div class="form-errortext">{{errors.email.message}}</div>
+        <div class="form-errortext">{{errors.email.message}}</div>
       {% endif %}
 
     </div>
 
     <button class="btn btn-block btn-primary" type="submit">发送邮件</button>
+
   </form>
 {% endblock %}
