--- a/views/login.html
+++ b/views/login.html
@@ -7,16 +7,21 @@
       {% if not user %}
       <h4 class="text-center">登录FT中文网</h4>
 
+      {% if errors.credentials %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <span>{{errors.credentials.message}}</span>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      {% endif %}
+
       <form method="post">
 
-        {% if errors.credentials %}
-          <div class="form-errortext text-center">{{errors.credentials.message}}</div>
-        {% endif %}
-
         <div class="form-group">
-          <label for="credentialsEmail">邮箱</label>
+          <label for="email">邮箱</label>
           <input class="form-control"
-          id="credentialsEmail"
+          id="email"
           type="email"
           name="credentials[email]"
           value="{{credentials.email}}"
@@ -29,9 +34,9 @@
         </div>
 
         <div class="form-group">
-          <label for="credentialsPassword">密码</label>
+          <label for="password">密码</label>
           <input class="form-control"
-          id="credentialsPassword"
+          id="password"
           type="password"
           name="credentials[password]"
           placeholder="密码"
@@ -41,6 +46,7 @@
           <div class="form-errortext">{{errors.password.message}}</div>
           {% endif %}
         </div>
+        
         <div class="form-check clearfix">
             <input class="form-check-input"
             id="rememberMe"
@@ -61,7 +67,7 @@
     </div>
   </div>
 </div>
-<div class="row justify-content-center">
+<!-- <div class="row justify-content-center">
   <div class="col-md-7 col-lg-5 col-xl-4">
     <div class="mt-4">
       <h5>其他登录方式</h5>
@@ -71,5 +77,5 @@
       </ul>
     </div>
   </div>
-</div>
+</div> -->
 {% endblock %}
