--- a/views/signup.html
+++ b/views/signup.html
@@ -3,43 +3,41 @@
 {% block content %}
 <div class="text-center">创建FT中文网账号</div>
 <form method="post">
-  <div>
-    <input type="hidden" name="_csrf" value="{{csrf}}">
-  </div>
+
   <div class="form-group">
-    <label for="userEmail">邮箱</label>
+    <label for="email">邮箱</label>
 
     <input class="form-control"
-    id="userEmail"
-    type="text"
-    name="user[email]"
-    value="{{user.email}}"
-    placeholder="电子邮箱"
-    required>
+      id="email"
+      type="text"
+      name="account[email]"
+      value="{{account.email}}"
+      placeholder="电子邮箱"
+      required>
     <small class="form-text text-muted">用于登录FT中文网</small>
 
     {% if errors.email %}
-    <div class="form-errortext">{{errors.email.message}}</div>
+      <div class="form-errortext">{{errors.email.message}}</div>
     {% endif %}
   </div>
 
   <div class="form-group">
-    <label for="userPassword">密码</label>
+    <label for="password">密码</label>
     <input class="form-control"
-    id="userPassword"
+    id="password"
     type="password"
-    name="user[password]"
+    name="account[password]"
     placeholder="密码"
     required>
-    <small class="form-text text-muted">8-20个字符，不能使用空格、表情符号</small>
+    <small class="form-text text-muted">最少8个字符，不能使用空格、表情符号</small>
 
     {% if errors.password %}
-    <div class="form-errortext">{{errors.password.message}}</div>
+      <div class="form-errortext">{{errors.password.message}}</div>
     {% endif %}
   </div>
 
-
   <button class="btn btn-block btn-primary" type="submit">注册</button>
+
 </form>
 <small class="">注册即代表您同意FT中文网<a href="http://www.ftchinese.com/m/corp/service.html" target="_blank">《用户注册协议》</a></small>
 
