standard error handling

--- a/views/address.html
+++ b/views/address.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% if alert.saved %}
+{% if alert.done == "address_saved" %}
   <div class="alert alert-success" role="alert">地址已保存</div>
 {% endif %}
 
