--- a/views/account.html
+++ b/views/account.html
@@ -2,11 +2,16 @@
 
 {% block content %}
 
-  {% if alert.saved %}
-    <div class="alert alert-success" role="alert">密码修改成功</div>
+  {% if alert.done == "password_saved" %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <span>密码修改成功</span>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
   {% endif %}
 
-  {% if alert.name %}
+  {% if alert.done == "name_saved" %}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
       <span>用户名已更新</span>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -15,7 +20,7 @@
     </div>
   {% endif %}
 
-  {% if alert.mobile %}
+  {% if alert.done == "mobile_saved" %}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
       <span>手机号码已更新</span>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -27,14 +32,14 @@
   <section>
     <h5>更改密码</h5>
 
-    <form method="post" action="/profile/password">
+    <form method="post" action="/account/password">
       <div class="form-group">
         <label for="oldPassword">当前密码</label>
         <input type="password"
-        class="form-control"
-        id="oldPassword"
-        name="oldPassword"
-        required>
+          class="form-control"
+          id="oldPassword"
+          name="oldPassword"
+          required>
     
         {% if errors.oldPassword %}
           <div class="form-errortext">{{errors.oldPassword.message}}</div>
@@ -42,26 +47,26 @@
       </div>
     
       <div class="form-group">
-        <label for="newPassword">新密码</label>
+        <label for="password">新密码</label>
         <input type="password"
-        class="form-control"
-        id="newPassword"
-        name="newPassword"
-        required>
-        <small class="form-text text-muted">8-20个字符，不能使用空格、表情符号</small>
+          class="form-control"
+          id="password"
+          name="password"
+          required>
+        <small class="form-text text-muted">最少8个字符，不能使用空格、表情符号</small>
     
-        {% if errors.newPassword %}
-          <div class="form-errortext">{{errors.newPassword.message}}</div>
+        {% if errors.password %}
+          <div class="form-errortext">{{errors.password.message}}</div>
         {% endif %}
       </div>
     
       <div class="form-group">
         <label for="confirmPassword">再次输入新密码</label>
         <input type="password"
-        class="form-control"
-        id="confirmPassword"
-        name="confirmPassword"
-        required>
+          class="form-control"
+          id="confirmPassword"
+          name="confirmPassword"
+          required>
     
         {% if errors.confirmPassword %}
           <div class="form-errortext">{{errors.confirmPassword.message}}</div>
@@ -75,7 +80,7 @@
 
   <section class="pt-2 mb-3">
     <h5>用户名</h5>
-    <form action="/profile/name" method="post">
+    <form action="/account/name" method="post">
 
       <div class="form-group">
         <input class="form-control"
@@ -97,7 +102,7 @@
 
   <section class="pt-2 mb-3">
     <h5>手机号码</h5>
-    <form action="/profile/mobile" method="post">
+    <form action="/account/mobile" method="post">
 
       <div class="form-group">
         <input class="form-control"
