--- a/views/email.html
+++ b/views/email.html
@@ -2,20 +2,16 @@
 
 {% block content %}
 
-{% if user and (not user.verified) %}
-  <div class="alert alert-primary" role="alert">请验证您的登录邮箱</div>
-{% endif %}
-
-{% if alert.invalid == "link" %}
+{% if errors.email_token %}
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <span>您似乎点击了无效的验证链接</span>
+    <span>{{errors.email_token.message}}</span>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
 {% endif %}
 
-{% if alert.done == "letter" %}
+{% if alert.done == "letter_sent" %}
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     <span>验证邮件已发送</span>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -24,7 +20,16 @@
   </div>
 {% endif %}
 
-{% if alert.saved == "email" %}
+{% if alert.done == "email_verified" %}
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <span>您的登录邮箱已成功验证</span>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+{% endif %}
+
+{% if alert.done == "email_saved" %}
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     <span>邮箱已更新，我们给您的新邮箱发送了激活邮件，请点击邮件中的链接确认新邮箱有效</span>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -33,7 +38,7 @@
   </div>
 {% endif %}
 
-{% if alert.saved == "newletter" %}
+{% if alert.done == "newsletter_saved" %}
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     <span>邮件设置已保存</span>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -44,8 +49,10 @@
 
 <section class="pt-2 mb-3">
   <h5>登录邮箱</h5>
-  <form method="post" action="/profile/email">
-
+  <form method="post" action="/email">
+    <div>
+      <input type="hidden" type="email" name="account[oldEmail]" value="{{account.oldEmail}}">
+    </div>
     <div class="form-group">
       <input class="form-control"
       id="email"
@@ -65,7 +72,7 @@
   {% if not user.verified %}
     <div class="d-flex align-items-center">
       <span>邮箱未验证</span>
-      <form action="/profile/email/request-verification" method="post">
+      <form action="/email/request-verification" method="post">
         <button class="btn btn-link">重新发送验证邮件</button>
       </form>
     </div>
@@ -74,14 +81,14 @@
 
 <section>
   <h5>邮件设置</h5>
-  <form method="post">
+  <form method="post" action="/email/newsletter">
     <div class="form-check">
       <input class="form-check-input"
-      id="letterTodayFocus"
-      type="checkbox"
-      name="letter[todayFocus]"
-      value="true"
-      {% if letter.todayFocus %} checked{% endif %}>
+        id="letterTodayFocus"
+        type="checkbox"
+        name="letter[todayFocus]"
+        value="true"
+        {% if letter.todayFocus %} checked{% endif %}>
       <label class="form-check-label" for="letterTodayFocus">接收“今日焦点”邮件</label>
     </div>
     <div class="form-check">
