--- a/views/profile/home.html
+++ b/views/profile/home.html
@@ -2,8 +2,13 @@
 
 {% block content %}
 
-{% if alert.saved %}
-  <div class="alert alert-success" role="alert">保存成功</div>
+{% if alert.done == "profile_saved" %}
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <span>保存成功</span>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
 {% endif %}
 
 <form method="post">
